--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ out/production/sp19-proj3-s1332-s1367/byow/TileEngine/TETile\.class
 out/production/sp19-proj3-s1332-s1367/byow/WorldGenerator\.class
 
 out/production/sp19-proj3-s1332-s1367/byow/WorldLocations\.class
+
+out/production/sp19-proj3-s1332-s1367/byow/SavedWorlds/savedWorld\.txt
